--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "expo": "^44.0.5",
     "react": "17.0.2",
     "react-native": "0.67.1"
   },
